Import of KRYDE/upfiles-7 from CPAN.
gitpan-cpan-distribution: upfiles
gitpan-cpan-version:      7
gitpan-cpan-path:         KRYDE/upfiles-7.tar.gz
gitpan-cpan-author:       KRYDE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -17,6 +17,9 @@ along with Upfiles.  If not, see <http://www.gnu.org/licenses/>.
 
 
 
+Version 7, November 2012
+    - print size of changes
+
 Version 6, August 2012
     - command line files
 
