Import of KRYDE/upfiles-8 from CPAN.
gitpan-cpan-distribution: upfiles
gitpan-cpan-version:      8
gitpan-cpan-path:         KRYDE/upfiles-8.tar.gz
gitpan-cpan-author:       KRYDE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -17,6 +17,9 @@ along with Upfiles.  If not, see <http://www.gnu.org/licenses/>.
 
 
 
+Version 8, November 2012
+    - use Regexp::Common::Emacs
+
 Version 7, November 2012
     - print size of changes
 
