--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-upfiles (9-0.1) unstable; urgency=low
+upfiles (10-0.1) unstable; urgency=low
 
   * Packaged version.
 
- -- Kevin Ryde <user42@zip.com.au>  Sat, 15 Dec 2012 14:36:26 +1100
+ -- Kevin Ryde <user42_kevin@yahoo.com.au>  Sat, 04 Oct 2014 09:07:24 +1000
